# who-owns-nashville-app

./: .gitignore  AGENTS.md  CHANGELOG.md  Davidson_Owner_Clusters_FINAL_2026-07-01.csv  JS.js  JS.rtf  JS2.rtf  LICENSE  Practice_URLS.rtf  README.md  dev_rebuild_web.sh  docker-compose.prod.yml  docker-compose.yml  index.html  metadata.json  pyproject.toml  rebuild_api.sh  rebuild_web.sh
Attributes_Parcelviewer/: 1996Imagery_WGS84:MapServer?f=json.json  2000Imagery_WGS84:MapServer?f=json.json  2004Imagery_WGS84:MapServer?f=json.json  2005Imagery_WGS84:MapServer?f=json.json  2006Imagery_WGS84:MapServer?f=json.json  2008Imagery_WGS84:MapServer?f=json.json  2009Imagery_WGS84:MapServer?f=json.json  2010Imagery_WGS84:MapServer?f=json.json  2013PictometryImagery_WGS84:MapServer?f=json.json  2014Imagery_WGS84:MapServer?f=json.json  2016Imagery_WGS84:MapServer?f=json.json  2017Imagery_WGS84:MapServer?f=json.json  2018Imagery_WGS84:MapServer?f=json.json  2020Imagery_WGS84:MapServer?f=json.json  2022Imagery_WGS84:MapServer?f=json.json  2023Imagery_WGS84:MapServer?f=json.json  Boundaries.json  Davidson_UseCodes_lookup.csv  GetUseCodes.xml  GetZoningCodes.xml  MapServer?f=json.json  May2010_FloodImagery_WGS84:MapServer?f=json.json  ParcelViewer:scripts:config.js  ParcelViewer:scripts:parcelviewer.js  ParcelViewer:styles:style.css  Zoning_Landuse:ZoningOverlayDistricts:MapServer:0?f=json.json  services:Basemaps:NashvilleBasemapMuted:MapServer?f=json.json  services:Boundaries:TaxDistricts:MapServer:3?f=json.json  services:Cadastral:Cadastral_Layers:MapServer:5?f=json.json  (+4 more)
(+8818 files in other folders)
