[project]
name = "who-owns-atl"
version = "0.1.0"
description = "Mapping corporate/LLC property ownership networks in Atlanta, Fulton County, and DeKalb County"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accela",
    "accelapy>=0.3.5",
    "geoalchemy2>=0.18.1",
    "geopandas>=1.1.2",
    "jinja2>=3.1.6",
    "networkx>=3.6.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
]

[tool.uv.sources]
accela = { git = "https://github.com/jessedp/accela.git" }
